Add binary search implementation